# Upwork-web-scrapper

./: README.md  auth_manager.py  browser_session.py  commands.py  database.py  discordbot.py  fetchdata.py  graphql_payloads.py  helpers.py  jobs.db  memory.py  pyproject.toml  shutdown.py  skill_taxonomy.json  skill_taxonomy.py  thread_helpers.py  thread_poster.py
auth_and_browser/: auth_manager.py  browser_session.py
database/: database.py  database_helper.py
discord_bot_commands/: cmd_channels.py  cmd_helpers.py  cmd_keywords.py  cmd_query.py  cmd_status.py  cmd_taxonomy.py  commands.py
discord_post_and_formatter/: helpers.py  thread_helpers.py  thread_poster.py
fetch_data/: fetchdata.py  graphql_payloads.py
taxonomy/: skill_taxonomy.py
utilties/: json_helper.py  memory.py
